network-stack/SecurityGroup.yaml
AWSTemplateFormatVersion: '2010-09-09'
Parameters:
  Environment:
    Type: String
  ProjectName:
    Type: String
  VPC:
    Description: VPCTesr
    Type: String

Resources:
  ECSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupName: ECS-Security-Group
      GroupDescription: Enable HTTP access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref LoadbalancerSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub ${Environment}-ecs-sg

  LoadbalancerSecurityGroup:
      Type: AWS::EC2::SecurityGroup
      Properties:
        GroupName: !Sub ${Environment}-alb-Security-Group
        GroupDescription: !Sub ${Environment}-alb security group
        VpcId: !Ref VPC
        SecurityGroupIngress:
          - IpProtocol: tcp
            FromPort: 80
            ToPort: 80
            CidrIp: 0.0.0.0/0
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: 0.0.0.0/0
          - IpProtocol: tcp
            FromPort: 9443
            ToPort: 9443
            CidrIp: 0.0.0.0/0
        Tags:
          - Key: Name
            Value: !Sub ${Environment}-alb-sg

Outputs:
  ECSSecurityGroup:
    Value: !Ref ECSSecurityGroup
    Export:
      Name: !Sub ${Environment}-ECSSecurityGroup
  LoadbalancerSecurityGroup:
    Value: !Ref LoadbalancerSecurityGroup
    Export:
      Name: !Sub ${Environment}-ALBSecurityGroup
