network-stack/VPC.yaml
AWSTemplateFormatVersion: 2010-09-09
Parameters:
  Environment:
    Type: String
  ProjectName:
    Type: String

  VpcCIDR:
    Description:  VPC CIDR Value
    Type: String
    Default: 172.29.0.0/16

  PublicSubnet1CIDR:
    Description:  PublicSubnet1 CIDR Value
    Type: String
    Default: 172.29.0.0/20

  PublicSubnet2CIDR:
    Description:  PublicSubnet2 CIDR Value
    Type: String
    Default: 172.29.16.0/20

  PublicSubnet3CIDR:
    Description:  PublicSubnet3 CIDR Value
    Type: String
    Default: 172.29.32.0/20

  PublicSubnet4CIDR:
    Description:  PublicSubnet4 CIDR Value
    Type: String
    Default: 172.29.48.0/20

  PublicSubnet5CIDR:
    Description:  PublicSubnet5 CIDR Value
    Type: String
    Default: 172.29.64.0/20

  PublicSubnet6CIDR:
    Description:  PublicSubnet6 CIDR Value
    Type: String
    Default: 172.29.80.0/20

  PrivateSubnet1CIDR:
    Description:  PrivateSubnet1 CIDR Value
    Type: String
    Default: 172.29.96.0/20

  PrivateSubnet2CIDR:
    Description:  PrivateSubnet2 CIDR Value
    Type: String
    Default: 172.29.112.0/20

  PrivateSubnet3CIDR:
    Description:  PrivateSubnet3 CIDR Value
    Type: String
    Default: 172.29.128.0/20

  PrivateSubnet4CIDR:
    Description:  PrivateSubnet4 CIDR Value
    Type: String
    Default: 172.29.144.0/20

  PrivateSubnet5CIDR:
    Description:  PrivateSubnet5 CIDR Value
    Type: String
    Default: 172.29.160.0/20

  PrivateSubnet6CIDR:
    Description:  PrivateSubnet6 CIDR Value
    Type: String
    Default: 172.29.176.0/20

  # StageVpcCIDR:
  #   Description: Stage VPC CIDR Value
  #   Type: String
  #   Default: 172.28.0.0/16

  # StagePublicSubnet1CIDR:
  #   Description: Stage PublicSubnet1 CIDR Value
  #   Type: String
  #   Default: 172.28.0.0/20

  # StagePublicSubnet2CIDR:
  #   Description: Stage PublicSubnet2 CIDR Value
  #   Type: String
  #   Default: 172.28.16.0/20

  # StagePublicSubnet3CIDR:
  #   Description: Stage PublicSubnet3 CIDR Value
  #   Type: String
  #   Default: 172.28.32.0/20

  # StagePublicSubnet4CIDR:
  #   Description: Stage PublicSubnet4 CIDR Value
  #   Type: String
  #   Default: 172.28.48.0/20

  # StagePublicSubnet5CIDR:
  #   Description: Stage PublicSubnet5 CIDR Value
  #   Type: String
  #   Default: 172.28.64.0/20

  # StagePublicSubnet6CIDR:
  #   Description: Stage PublicSubnet6 CIDR Value
  #   Type: String
  #   Default: 172.28.80.0/20

  # StagePrivateSubnet1CIDR:
  #   Description: Stage PrivateSubnet1 CIDR Value
  #   Type: String
  #   Default: 172.28.96.0/20

  # StagePrivateSubnet2CIDR:
  #   Description: Stage PrivateSubnet2 CIDR Value
  #   Type: String
  #   Default: 172.28.112.0/20

  # StagePrivateSubnet3CIDR:
  #   Description: Stage PrivateSubnet3 CIDR Value
  #   Type: String
  #   Default: 172.28.128.0/20

  # StagePrivateSubnet4CIDR:
  #   Description: Stage PrivateSubnet4 CIDR Value
  #   Type: String
  #   Default: 172.28.144.0/20

  # StagePrivateSubnet5CIDR:
  #   Description: Stage PrivateSubnet5 CIDR Value
  #   Type: String
  #   Default: 172.28.160.0/20

  # StagePrivateSubnet6CIDR:
  #   Description: Stage PrivateSubnet6 CIDR Value
  #   Type: String
  #   Default: 172.28.176.0/20

  # DevVpcCIDR:
  #   Description: Dev VPC CIDR Value
  #   Type: String
  #   Default: 172.27.0.0/16

  # DevPublicSubnet1CIDR:
  #   Description: Dev PublicSubnet1 CIDR Value
  #   Type: String
  #   Default: 172.27.0.0/20

  # DevPublicSubnet2CIDR:
  #   Description: Dev PublicSubnet2 CIDR Value
  #   Type: String
  #   Default: 172.27.16.0/20

  # DevPublicSubnet3CIDR:
  #   Description: Dev PublicSubnet3 CIDR Value
  #   Type: String
  #   Default: 172.27.32.0/20

  # DevPublicSubnet4CIDR:
  #   Description: Dev PublicSubnet4 CIDR Value
  #   Type: String
  #   Default: 172.27.48.0/20

  # DevPublicSubnet5CIDR:
  #   Description: Dev PublicSubnet5 CIDR Value
  #   Type: String
  #   Default: 172.27.64.0/20

  # DevPublicSubnet6CIDR:
  #   Description: Dev PublicSubnet6 CIDR Value
  #   Type: String
  #   Default: 172.27.80.0/20

  # DevPrivateSubnet1CIDR:
  #   Description: Dev PrivateSubnet1 CIDR Value
  #   Type: String
  #   Default: 172.27.96.0/20

  # DevPrivateSubnet2CIDR:
  #   Description: Dev PrivateSubnet2 CIDR Value
  #   Type: String
  #   Default: 172.27.112.0/20

  # DevPrivateSubnet3CIDR:
  #   Description: Dev PrivateSubnet3 CIDR Value
  #   Type: String
  #   Default: 172.27.128.0/20

  # DevPrivateSubnet4CIDR:
  #   Description: Dev PrivateSubnet4 CIDR Value
  #   Type: String
  #   Default: 172.27.144.0/20

  # DevPrivateSubnet5CIDR:
  #   Description: Dev PrivateSubnet5 CIDR Value
  #   Type: String
  #   Default: 172.27.160.0/20

  # DevPrivateSubnet6CIDR:
  #   Description: Dev PrivateSubnet6 CIDR Value
  #   Type: String
  #   Default: 172.27.176.0/20

#Description: Passing Condition to create a respective environment
# Conditions:
#   ProdEnv: !Equals [ !Ref Environment, production ]
#   DevEnv: !Equals [ !Ref Environment, development ]
#   StageEnv: !Equals [ !Ref Environment, staging ]

Resources:
#VPC_Creation:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
        CidrBlock: !Ref VpcCIDR
        # CidrBlock: !If [ ProdEnv, !Ref ProdVpcCIDR, !If [ StageEnv, !Ref StageVpcCIDR, !Ref DevVpcCIDR ]]
        EnableDnsSupport: true
        EnableDnsHostnames: true
        Tags:
          - Key: Name
            Value: !Sub ${Environment}-VPC
  #RouteTableCreation
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
        VpcId: !Ref VPC
        Tags:
          - Key: Name
            Value: !Sub ${Environment}-public-rt
    DependsOn: InternetGateway

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
        VpcId: !Ref VPC
        Tags:
          - Key: Name
            Value: !Sub ${Environment}-private-rt

  #Public table route config & internet gateway attachment
  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref PublicRouteTable

  #Private table route config & Natgateway attachment
  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway
      RouteTableId: !Ref PrivateRouteTable

  #SubnetCreation:
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
        VpcId: !Ref VPC
        CidrBlock: !Ref PublicSubnet1CIDR
        # CidrBlock: !If [ProdEnv, !Ref ProdPublicSubnet1CIDR, !If [StageEnv, !Ref StagePublicSubnet1CIDR, !Ref DevPublicSubnet1CIDR]]
        MapPublicIpOnLaunch: true
        AvailabilityZone: !Select [ 0, !GetAZs '' ]
        Tags:
          - Key: Name
            Value: !Sub ${Environment}-public-1a

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
        VpcId: !Ref VPC
        CidrBlock: !Ref PublicSubnet2CIDR
        # CidrBlock: !If [ProdEnv, !Ref ProdPublicSubnet2CIDR, !If [StageEnv, !Ref StagePublicSubnet2CIDR, !Ref DevPublicSubnet2CIDR]]
        MapPublicIpOnLaunch: true
        AvailabilityZone: !Select [ 1, !GetAZs '' ]
        Tags:
          - Key: Name
            Value: !Sub ${Environment}-public-1b

  PublicSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
        VpcId: !Ref VPC
        CidrBlock: !Ref PublicSubnet3CIDR
        # CidrBlock: !If [ProdEnv, !Ref ProdPublicSubnet3CIDR, !If [StageEnv, !Ref StagePublicSubnet3CIDR, !Ref DevPublicSubnet3CIDR]]
        MapPublicIpOnLaunch: true
        AvailabilityZone: !Select [ 2, !GetAZs '' ]
        Tags:
          - Key: Name
            Value: !Sub ${Environment}-public-1c

  PublicSubnet4:
    Type: AWS::EC2::Subnet
    Properties:
        VpcId: !Ref VPC
        CidrBlock: !Ref PublicSubnet4CIDR
        # CidrBlock: !If [ProdEnv, !Ref ProdPublicSubnet4CIDR, !If [StageEnv, !Ref StagePublicSubnet4CIDR, !Ref DevPublicSubnet4CIDR]]
        MapPublicIpOnLaunch: true
        AvailabilityZone: !Select [ 3, !GetAZs '' ]
        Tags:
          - Key: Name
            Value: !Sub ${Environment}-public-1d

  PublicSubnet5:
    Type: AWS::EC2::Subnet
    Properties:
        VpcId: !Ref VPC
        CidrBlock: !Ref PublicSubnet5CIDR
        # CidrBlock: !If [ProdEnv, !Ref ProdPublicSubnet5CIDR, !If [StageEnv, !Ref StagePublicSubnet5CIDR, !Ref DevPublicSubnet5CIDR]]
        MapPublicIpOnLaunch: true
        AvailabilityZone: !Select [ 4, !GetAZs '' ]
        Tags:
          - Key: Name
            Value: !Sub ${Environment}-public-1e

  PublicSubnet6:
    Type: AWS::EC2::Subnet
    Properties:
        VpcId: !Ref VPC
        CidrBlock: !Ref PublicSubnet6CIDR
        # CidrBlock: !If [ProdEnv, !Ref ProdPublicSubnet6CIDR, !If [StageEnv, !Ref StagePublicSubnet6CIDR, !Ref DevPublicSubnet6CIDR]]
        MapPublicIpOnLaunch: true
        AvailabilityZone: !Select [ 5, !GetAZs '' ]
        Tags:
          - Key: Name
            Value: !Sub ${Environment}-public-1f

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
        VpcId: !Ref VPC
        CidrBlock: !Ref PrivateSubnet1CIDR
        # CidrBlock: !If [ProdEnv, !Ref ProdPrivateSubnet1CIDR, !If [StageEnv, !Ref StagePrivateSubnet1CIDR, !Ref DevPrivateSubnet1CIDR]]
        MapPublicIpOnLaunch: false
        AvailabilityZone: !Select [ 0, !GetAZs '' ]
        Tags:
          - Key: Name
            Value: !Sub ${Environment}-private-1a

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
        VpcId: !Ref VPC
        CidrBlock: !Ref PrivateSubnet2CIDR
        # CidrBlock: !If [ProdEnv, !Ref ProdPrivateSubnet2CIDR, !If [StageEnv, !Ref StagePrivateSubnet2CIDR, !Ref DevPrivateSubnet2CIDR]]
        MapPublicIpOnLaunch: false
        AvailabilityZone: !Select [ 1, !GetAZs '' ]
        Tags:
          - Key: Name
            Value: !Sub ${Environment}-private-1b

  PrivateSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
        VpcId: !Ref VPC
        CidrBlock: !Ref PrivateSubnet3CIDR
        # CidrBlock: !If [ProdEnv, !Ref ProdPrivateSubnet3CIDR, !If [StageEnv, !Ref StagePrivateSubnet3CIDR, !Ref DevPrivateSubnet3CIDR]]
        MapPublicIpOnLaunch: false
        AvailabilityZone: !Select [ 2, !GetAZs '' ]
        Tags:
          - Key: Name
            Value: !Sub ${Environment}-private-1c

  PrivateSubnet4:
    Type: AWS::EC2::Subnet
    Properties:
        VpcId: !Ref VPC
        CidrBlock: !Ref PrivateSubnet4CIDR
        # CidrBlock: !If [ProdEnv, !Ref ProdPrivateSubnet4CIDR, !If [StageEnv, !Ref StagePrivateSubnet4CIDR, !Ref DevPrivateSubnet4CIDR]]
        MapPublicIpOnLaunch: false
        AvailabilityZone: !Select [ 3, !GetAZs '' ]
        Tags:
          - Key: Name
            Value: !Sub ${Environment}-private-1d

  PrivateSubnet5:
    Type: AWS::EC2::Subnet
    Properties:
        VpcId: !Ref VPC
        CidrBlock: !Ref PrivateSubnet5CIDR
        # CidrBlock: !If [ProdEnv, !Ref ProdPrivateSubnet5CIDR, !If [StageEnv, !Ref StagePrivateSubnet5CIDR, !Ref DevPrivateSubnet5CIDR]]
        MapPublicIpOnLaunch: false
        AvailabilityZone: !Select [ 4, !GetAZs '' ]
        Tags:
          - Key: Name
            Value: !Sub ${Environment}-private-1e

  PrivateSubnet6:
    Type: AWS::EC2::Subnet
    Properties:
        VpcId: !Ref VPC
        CidrBlock: !Ref PrivateSubnet6CIDR
        # CidrBlock: !If [ProdEnv, !Ref ProdPrivateSubnet6CIDR, !If [StageEnv, !Ref StagePrivateSubnet6CIDR, !Ref DevPrivateSubnet6CIDR]]
        MapPublicIpOnLaunch: false
        AvailabilityZone: !Select [ 5, !GetAZs '' ]
        Tags:
          - Key: Name
            Value: !Sub ${Environment}-private-1f

  #SubnetsAssociation:
  PublicSubentAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
        RouteTableId: !Ref PublicRouteTable
        SubnetId: !Ref PublicSubnet1

  PublicSubentAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
        RouteTableId: !Ref PublicRouteTable
        SubnetId: !Ref PublicSubnet2

  PublicSubentAssociation3:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
        RouteTableId: !Ref PublicRouteTable
        SubnetId: !Ref PublicSubnet3

  PublicSubentAssociation4:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
        RouteTableId: !Ref PublicRouteTable
        SubnetId: !Ref PublicSubnet4

  PublicSubentAssociation5:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
        RouteTableId: !Ref PublicRouteTable
        SubnetId: !Ref PublicSubnet5

  PublicSubentAssociation6:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
        RouteTableId: !Ref PublicRouteTable
        SubnetId: !Ref PublicSubnet6

  PrivateSubentAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
        RouteTableId: !Ref PrivateRouteTable
        SubnetId: !Ref PrivateSubnet1

  PrivateSubentAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
        RouteTableId: !Ref PrivateRouteTable
        SubnetId: !Ref PrivateSubnet2

  PrivateSubentAssociation3:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
        RouteTableId: !Ref PrivateRouteTable
        SubnetId: !Ref PrivateSubnet3

  PrivateSubentAssociation4:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
        RouteTableId: !Ref PrivateRouteTable
        SubnetId: !Ref PrivateSubnet4

  PrivateSubentAssociation5:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
        RouteTableId: !Ref PrivateRouteTable
        SubnetId: !Ref PrivateSubnet5

  PrivateSubentAssociation6:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
        RouteTableId: !Ref PrivateRouteTable
        SubnetId: !Ref PrivateSubnet6

  #InternetGateway Creation:
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${Environment}-IGW

  #Attaching VPC to InternetGateWay:
  VpcAttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  #Elastic IP Creation:
  NatGatewayEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub ${Environment}-NGW-EIP
    #DependsOn: AttachGateway

  #NatgatewayCreation:
  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGatewayEIP.AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: Name
          Value: !Sub ${Environment}-NGW

Outputs:
  VPC:
    Value: !Ref VPC
    Export:
      Name: !Sub ${ProjectName}-${Environment}-VPC-ID
  PublicSubnets:
    Description: A list of the public subnets
    Value: !Join [ ",", [ !Ref PublicSubnet1, !Ref PublicSubnet2, !Ref PublicSubnet3, !Ref PublicSubnet4, !Ref PublicSubnet5, !Ref PublicSubnet6 ]]
    Export:
      Name: !Sub ${ProjectName}-${Environment}-PublicSubnets
  PrivateSubnets:
    Description: A list of the private subnets
    Value: !Join [ ",", [ !Ref PrivateSubnet1, !Ref PrivateSubnet2, !Ref PrivateSubnet3, !Ref PrivateSubnet4, !Ref PrivateSubnet5, !Ref PrivateSubnet6 ]]
    Export:
      Name: !Sub ${ProjectName}-${Environment}-PrivateSubnets
  NatGatewayEIP:
    Value: !Ref NatGatewayEIP
    Export:
      Name: !Sub ${Environment}-NGW-EIP
